src/main/java/com/company/antlr4gen/gramatykaParser.java
// Generated from gramatyka.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramatykaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, ModyfikatorKlasy=33, INT=34, ID=35, WS=36;
	public static final int
		RULE_kompilacja = 0, RULE_deklaracjiaPaczki = 1, RULE_deklaracjaImportu = 2, 
		RULE_typDeklaracji = 3, RULE_deklaracjaKlasy = 4, RULE_cialoKlasy = 5, 
		RULE_wnetrze = 6, RULE_deklaracjaMetody = 7, RULE_deklaracjaSkladowych = 8, 
		RULE_modyfikator = 9, RULE_stala = 10, RULE_parametrMetody = 11, RULE_deklaracjaParametrowMetod = 12, 
		RULE_cialoMetody = 13, RULE_deklaracjaZmiennej = 14, RULE_instrukcja = 15, 
		RULE_inicjalizaacjaZmiennej = 16, RULE_typ = 17, RULE_komunikat = 18, 
		RULE_wyrazenie = 19, RULE_dubwyrazenie = 20, RULE_literal = 21, RULE_typPrymitywny = 22, 
		RULE_nazwaKlasy = 23, RULE_nazwaMetody = 24, RULE_nazwa = 25, RULE_nazwaZmiennej = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"kompilacja", "deklaracjiaPaczki", "deklaracjaImportu", "typDeklaracji", 
			"deklaracjaKlasy", "cialoKlasy", "wnetrze", "deklaracjaMetody", "deklaracjaSkladowych", 
			"modyfikator", "stala", "parametrMetody", "deklaracjaParametrowMetod", 
			"cialoMetody", "deklaracjaZmiennej", "instrukcja", "inicjalizaacjaZmiennej", 
			"typ", "komunikat", "wyrazenie", "dubwyrazenie", "literal", "typPrymitywny", 
			"nazwaKlasy", "nazwaMetody", "nazwa", "nazwaZmiennej"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "';'", "'import'", "'static'", "'.'", "'*'", "'class'", 
			"'{'", "'}'", "'['", "']'", "'private'", "'static final'", "'final static'", 
			"'('", "')'", "','", "'='", "'''", "'void'", "'return'", "'if'", "'else {'", 
			"'+'", "'-'", "'/'", "'=='", "'!='", "'null'", "'char'", "'int'", "'float'", 
			"'public'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "ModyfikatorKlasy", 
			"INT", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatyka.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramatykaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class KompilacjaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(gramatykaParser.EOF, 0); }
		public DeklaracjiaPaczkiContext deklaracjiaPaczki() {
			return getRuleContext(DeklaracjiaPaczkiContext.class,0);
		}
		public List<DeklaracjaImportuContext> deklaracjaImportu() {
			return getRuleContexts(DeklaracjaImportuContext.class);
		}
		public DeklaracjaImportuContext deklaracjaImportu(int i) {
			return getRuleContext(DeklaracjaImportuContext.class,i);
		}
		public List<TypDeklaracjiContext> typDeklaracji() {
			return getRuleContexts(TypDeklaracjiContext.class);
		}
		public TypDeklaracjiContext typDeklaracji(int i) {
			return getRuleContext(TypDeklaracjiContext.class,i);
		}
		public KompilacjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kompilacja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterKompilacja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitKompilacja(this);
		}
	}

	public final KompilacjaContext kompilacja() throws RecognitionException {
		KompilacjaContext _localctx = new KompilacjaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kompilacja);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(54);
				deklaracjiaPaczki();
				}
			}

			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(57);
				deklaracjaImportu();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__6) | (1L << ModyfikatorKlasy))) != 0)) {
				{
				{
				setState(63);
				typDeklaracji();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjiaPaczkiContext extends ParserRuleContext {
		public NazwaContext nazwa() {
			return getRuleContext(NazwaContext.class,0);
		}
		public DeklaracjiaPaczkiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjiaPaczki; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjiaPaczki(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjiaPaczki(this);
		}
	}

	public final DeklaracjiaPaczkiContext deklaracjiaPaczki() throws RecognitionException {
		DeklaracjiaPaczkiContext _localctx = new DeklaracjiaPaczkiContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_deklaracjiaPaczki);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__0);
			setState(72);
			nazwa();
			setState(73);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjaImportuContext extends ParserRuleContext {
		public NazwaContext nazwa() {
			return getRuleContext(NazwaContext.class,0);
		}
		public DeklaracjaImportuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjaImportu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjaImportu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjaImportu(this);
		}
	}

	public final DeklaracjaImportuContext deklaracjaImportu() throws RecognitionException {
		DeklaracjaImportuContext _localctx = new DeklaracjaImportuContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_deklaracjaImportu);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__2);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(76);
				match(T__3);
				}
			}

			setState(79);
			nazwa();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(80);
				match(T__4);
				setState(81);
				match(T__5);
				}
			}

			setState(84);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypDeklaracjiContext extends ParserRuleContext {
		public DeklaracjaKlasyContext deklaracjaKlasy() {
			return getRuleContext(DeklaracjaKlasyContext.class,0);
		}
		public List<TerminalNode> ModyfikatorKlasy() { return getTokens(gramatykaParser.ModyfikatorKlasy); }
		public TerminalNode ModyfikatorKlasy(int i) {
			return getToken(gramatykaParser.ModyfikatorKlasy, i);
		}
		public TypDeklaracjiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typDeklaracji; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterTypDeklaracji(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitTypDeklaracji(this);
		}
	}

	public final TypDeklaracjiContext typDeklaracji() throws RecognitionException {
		TypDeklaracjiContext _localctx = new TypDeklaracjiContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typDeklaracji);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case ModyfikatorKlasy:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ModyfikatorKlasy) {
					{
					{
					setState(86);
					match(ModyfikatorKlasy);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				{
				setState(92);
				deklaracjaKlasy();
				}
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjaKlasyContext extends ParserRuleContext {
		public NazwaKlasyContext nazwaKlasy() {
			return getRuleContext(NazwaKlasyContext.class,0);
		}
		public CialoKlasyContext cialoKlasy() {
			return getRuleContext(CialoKlasyContext.class,0);
		}
		public DeklaracjaKlasyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjaKlasy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjaKlasy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjaKlasy(this);
		}
	}

	public final DeklaracjaKlasyContext deklaracjaKlasy() throws RecognitionException {
		DeklaracjaKlasyContext _localctx = new DeklaracjaKlasyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_deklaracjaKlasy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__6);
			setState(97);
			nazwaKlasy();
			setState(98);
			match(T__7);
			setState(99);
			cialoKlasy();
			setState(100);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CialoKlasyContext extends ParserRuleContext {
		public List<WnetrzeContext> wnetrze() {
			return getRuleContexts(WnetrzeContext.class);
		}
		public WnetrzeContext wnetrze(int i) {
			return getRuleContext(WnetrzeContext.class,i);
		}
		public CialoKlasyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cialoKlasy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterCialoKlasy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitCialoKlasy(this);
		}
	}

	public final CialoKlasyContext cialoKlasy() throws RecognitionException {
		CialoKlasyContext _localctx = new CialoKlasyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cialoKlasy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__19) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << ModyfikatorKlasy))) != 0)) {
				{
				{
				setState(102);
				wnetrze();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WnetrzeContext extends ParserRuleContext {
		public DeklaracjaMetodyContext deklaracjaMetody() {
			return getRuleContext(DeklaracjaMetodyContext.class,0);
		}
		public DeklaracjaSkladowychContext deklaracjaSkladowych() {
			return getRuleContext(DeklaracjaSkladowychContext.class,0);
		}
		public WnetrzeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wnetrze; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterWnetrze(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitWnetrze(this);
		}
	}

	public final WnetrzeContext wnetrze() throws RecognitionException {
		WnetrzeContext _localctx = new WnetrzeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_wnetrze);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				deklaracjaMetody();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				deklaracjaSkladowych();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjaMetodyContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public NazwaMetodyContext nazwaMetody() {
			return getRuleContext(NazwaMetodyContext.class,0);
		}
		public ParametrMetodyContext parametrMetody() {
			return getRuleContext(ParametrMetodyContext.class,0);
		}
		public CialoMetodyContext cialoMetody() {
			return getRuleContext(CialoMetodyContext.class,0);
		}
		public ModyfikatorContext modyfikator() {
			return getRuleContext(ModyfikatorContext.class,0);
		}
		public DeklaracjaMetodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjaMetody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjaMetody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjaMetody(this);
		}
	}

	public final DeklaracjaMetodyContext deklaracjaMetody() throws RecognitionException {
		DeklaracjaMetodyContext _localctx = new DeklaracjaMetodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_deklaracjaMetody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11 || _la==ModyfikatorKlasy) {
				{
				setState(112);
				modyfikator();
				}
			}

			setState(115);
			typ();
			setState(116);
			nazwaMetody();
			setState(117);
			parametrMetody();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(118);
				match(T__9);
				setState(119);
				match(T__10);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			cialoMetody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjaSkladowychContext extends ParserRuleContext {
		public DeklaracjaZmiennejContext deklaracjaZmiennej() {
			return getRuleContext(DeklaracjaZmiennejContext.class,0);
		}
		public ModyfikatorContext modyfikator() {
			return getRuleContext(ModyfikatorContext.class,0);
		}
		public StalaContext stala() {
			return getRuleContext(StalaContext.class,0);
		}
		public DeklaracjaSkladowychContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjaSkladowych; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjaSkladowych(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjaSkladowych(this);
		}
	}

	public final DeklaracjaSkladowychContext deklaracjaSkladowych() throws RecognitionException {
		DeklaracjaSkladowychContext _localctx = new DeklaracjaSkladowychContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_deklaracjaSkladowych);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11 || _la==ModyfikatorKlasy) {
				{
				setState(127);
				modyfikator();
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12 || _la==T__13) {
				{
				setState(130);
				stala();
				}
			}

			setState(133);
			deklaracjaZmiennej();
			setState(134);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModyfikatorContext extends ParserRuleContext {
		public TerminalNode ModyfikatorKlasy() { return getToken(gramatykaParser.ModyfikatorKlasy, 0); }
		public ModyfikatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modyfikator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterModyfikator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitModyfikator(this);
		}
	}

	public final ModyfikatorContext modyfikator() throws RecognitionException {
		ModyfikatorContext _localctx = new ModyfikatorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_modyfikator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !(_la==T__11 || _la==ModyfikatorKlasy) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StalaContext extends ParserRuleContext {
		public StalaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stala; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterStala(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitStala(this);
		}
	}

	public final StalaContext stala() throws RecognitionException {
		StalaContext _localctx = new StalaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stala);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_la = _input.LA(1);
			if ( !(_la==T__12 || _la==T__13) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrMetodyContext extends ParserRuleContext {
		public DeklaracjaParametrowMetodContext deklaracjaParametrowMetod() {
			return getRuleContext(DeklaracjaParametrowMetodContext.class,0);
		}
		public ParametrMetodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrMetody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterParametrMetody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitParametrMetody(this);
		}
	}

	public final ParametrMetodyContext parametrMetody() throws RecognitionException {
		ParametrMetodyContext _localctx = new ParametrMetodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_parametrMetody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__14);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__29) | (1L << T__30) | (1L << T__31))) != 0)) {
				{
				setState(141);
				deklaracjaParametrowMetod();
				}
			}

			setState(144);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjaParametrowMetodContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public NazwaZmiennejContext nazwaZmiennej() {
			return getRuleContext(NazwaZmiennejContext.class,0);
		}
		public DeklaracjaParametrowMetodContext deklaracjaParametrowMetod() {
			return getRuleContext(DeklaracjaParametrowMetodContext.class,0);
		}
		public DeklaracjaParametrowMetodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjaParametrowMetod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjaParametrowMetod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjaParametrowMetod(this);
		}
	}

	public final DeklaracjaParametrowMetodContext deklaracjaParametrowMetod() throws RecognitionException {
		DeklaracjaParametrowMetodContext _localctx = new DeklaracjaParametrowMetodContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_deklaracjaParametrowMetod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			typ();
			setState(147);
			nazwaZmiennej();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(148);
				match(T__16);
				setState(149);
				deklaracjaParametrowMetod();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CialoMetodyContext extends ParserRuleContext {
		public List<InstrukcjaContext> instrukcja() {
			return getRuleContexts(InstrukcjaContext.class);
		}
		public InstrukcjaContext instrukcja(int i) {
			return getRuleContext(InstrukcjaContext.class,i);
		}
		public CialoMetodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cialoMetody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterCialoMetody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitCialoMetody(this);
		}
	}

	public final CialoMetodyContext cialoMetody() throws RecognitionException {
		CialoMetodyContext _localctx = new CialoMetodyContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_cialoMetody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__7);
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				instrukcja();
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << INT) | (1L << ID))) != 0) );
			setState(158);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeklaracjaZmiennejContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public NazwaZmiennejContext nazwaZmiennej() {
			return getRuleContext(NazwaZmiennejContext.class,0);
		}
		public InicjalizaacjaZmiennejContext inicjalizaacjaZmiennej() {
			return getRuleContext(InicjalizaacjaZmiennejContext.class,0);
		}
		public DeklaracjaZmiennejContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deklaracjaZmiennej; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).enterDeklaracjaZmiennej(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatykaListener ) ((gramatykaListener)listener).exitDeklaracjaZmiennej(this);
		}
	}
